tests/analyzer/errors/uninit_var.ray
var a: bool

var _empty: str

fn main() {
    print a + 1
    print _empty
}
